Edited wiki page through web user interface.

--- a/wiki/TermsOfService.wiki
+++ b/wiki/TermsOfService.wiki
@@ -2,52 +2,52 @@
 
 == Agreement ==
 
-  # This agreement is between you, the user of the G02.ME web site (the Service), and [http://startpad.org StartPad], 811 First Ave Seattle, Suite 480, WA, 98104 ("!StartPad").
-  # In order to use the Service, you must agree to these Terms of Service.
-  # You must be 13 years or older to use the Service.
-  # !StartPad may terminate your use of the Service at any time, if, at the sole discretion of !StartPad, you have violated the terms of this agreement.
-  # !StartPad reserves the right to change this agreement without prior notice.
+  * This agreement is between you, the user of the G02.ME web site (the Service), and [http://startpad.org StartPad], 811 First Ave Seattle, Suite 480, WA, 98104 ("!StartPad").
+  * In order to use the Service, you must agree to these Terms of Service.
+  * You must be 13 years or older to use the Service.
+  * !StartPad may terminate your use of the Service at any time, if, at the sole discretion of !StartPad, you have violated the terms of this agreement.
+  * !StartPad reserves the right to change this agreement without prior notice.
 
 == Account ==
 
-  # You may use the Service anonymously.
-  # If you do create an account (register), you must provide correct contact (email) information so we can get in touch with you about your use of the service.
-  # You agree not to try to access the administrative features of the Service without authorization.
-  # You agree not to attempt to impersonate or otherwise use the Service on behalf of another user without their prior knowledge and consent.
-  # You agree not to attempt to deny access or disrupt the use of the Service by any other user.
+  * You may use the Service anonymously.
+  * If you do create an account (register), you must provide correct contact (email) information so we can get in touch with you about your use of the service.
+  * You agree not to try to access the administrative features of the Service without authorization.
+  * You agree not to attempt to impersonate or otherwise use the Service on behalf of another user without their prior knowledge and consent.
+  * You agree not to attempt to deny access or disrupt the use of the Service by any other user.
 
 == Privacy Policy ==
 
-  # The [http://code.google.com/appengine/privacy.html Google App Engine Privacy Policy] and [http://www.google.com/privacypolicy.html Google Privacy Policy] is included by reference in this agreement.
-  # !StartPad will have access to your user name and email address if you register with the Service.
-  # !StartPad will have access to all information provided by you to the service.
-  # When !StartPad collects email addresses, IP addresses, or personal passwords in conjunction with the use of the Service, it will not disclose this information with any 3rd party without your prior consent.
+  * The [http://code.google.com/appengine/privacy.html Google App Engine Privacy Policy] and [http://www.google.com/privacypolicy.html Google Privacy Policy] is included by reference in this agreement.
+  * !StartPad will have access to your user name and email address if you register with the Service.
+  * !StartPad will have access to all information provided by you to the service.
+  * When !StartPad collects email addresses, IP addresses, or personal passwords in conjunction with the use of the Service, it will not disclose this information with any 3rd party without your prior consent.
 
 == Fees ==
 
-  # The Service is provided to you without charge.
-  # !StartPad reserves the right to change the fee and payment policy at any time.
+  * The Service is provided to you without charge.
+  * !StartPad reserves the right to change the fee and payment policy at any time.
 
 == Content ==
 
-  # "Content" is defined as any explicit and implicit information provided to the Service.
-  # You understand that all Content to which you may have access through use of the Service is the sole responsibility of the person from which that Content originated.
-  # !StartPad may, at it's sole discretion, remove any Content from the Service, without prior notice.
-  # You agree !StartPad has no responsibility or liability for the deletion or failure to store any Content you provide to the Service.
+  * "Content" is defined as any explicit and implicit information provided to the Service.
+  * You understand that all Content to which you may have access through use of the Service is the sole responsibility of the person from which that Content originated.
+  * !StartPad may, at it's sole discretion, remove any Content from the Service, without prior notice.
+  * You agree !StartPad has no responsibility or liability for the deletion or failure to store any Content you provide to the Service.
 
 == Proprietary Rights ==
 
-  # Your rights to the software used in the Service are granted by this [License].
+  * Your rights to the software used in the Service are granted by this [License].
 
 == License from You ==
 
-  # By providing content to the Service, you give !StartPad a worldwide, royalty-free, and non-exclusive license to reproduce, adapt, modify, translate, publish, publicly display and distribute such Content for the purpose of enabling !StartPad to provide you with the Service in accordance with its privacy policy.
+  * By providing content to the Service, you give !StartPad a worldwide, royalty-free, and non-exclusive license to reproduce, adapt, modify, translate, publish, publicly display and distribute such Content for the purpose of enabling !StartPad to provide you with the Service in accordance with its privacy policy.
 
 == Exclusion of Warranties ==
 
-  # The Service is provided without warranty or liability for losses which may be incurred by you in conjunction with your use of the Service.
-  # You agree that your use of the Service is at your sole risk and is provided to you "as is" and "as available".
+  * The Service is provided without warranty or liability for losses which may be incurred by you in conjunction with your use of the Service.
+  * You agree that your use of the Service is at your sole risk and is provided to you "as is" and "as available".
 
 == Limitation of Liability ==
 
-  # You agree that !StartPad shall not be liable to you for any damages which may be incurred by you in conjunction with the use of the Service.
+  * You agree that !StartPad shall not be liable to you for any damages which may be incurred by you in conjunction with the use of the Service.
