--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -98,16 +98,24 @@ http://g02.me/info/G?callback=Test
 Results:
 {{{
 Test({"status": "OK",
-  "created": new Date("10/16/2008 15:35 GMT"),
+  "created": new Date("10/19/2008  1: 3 GMT"),
   "url": "http://www.google.com/",
   "title": "Google",
   "comments": [
-    {"comment": "The mighty search engine...", "user": "mckoss"},
-    {"comment": "I like Google"}
+    {"comment": "Good point - I do need to add a session key, I think",
+     "cid": 2429, "user": "mckoss", "created": new Date("10/20/2008  4:41 GMT")},
+    {"comment": "It is not a good idea to mutate state with http GET",
+     "cid": 2603, "user": 176, "created": new Date("10/20/2008  2:28 GMT")},
+    {"comment": "The mighty search engine...",
+     "cid": 201, "user": "mckoss", "created": new Date("9/3/2008  2:45 GMT")}
     ],
-  "shared": 7,
+  "scores": {
+    "week": 1.0351657695680767, "year": 0.025629305528245251,
+    "day": 4.1498525861082705, "month": 0.26948546154964254
+    },
+  "shared": 12,
   "id": "G",
-  "viewed": 48});
+  "viewed": 180});
 }}}
 
 http://g02.me/map/?url=http://code.google.com/p/g02me/wiki/API&title=Edit%20API-g02me&callback=Test
