--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -164,20 +164,38 @@ Test({"status": "OK",
 }}}
 
 http://g02.me/comment/?id=G&comment=test:This%20is%20a%20test%20comment%20%5Bsearch%2C%20engine%5D&callback=Test
+
+Results:
 {{{
 Test({"status": "OK",
-  "created": new Date("10/16/2008 22:19 GMT"),
+  "created": new Date("10/19/2008  1: 3 GMT"),
   "url": "http://www.google.com/",
   "title": "Google",
   "comments": [
-    {"comment": "The mighty search engine...", "user": "mckoss"},
-    {"comment": "I like Google"},
-    {"comment": "This is test of tags", "user": "mckoss", "tags": "search engine,search"},
-    {"comment": "test comment", "user": "mckoss"},
-    {"comment": "this is another comment via REST call"},
-    {"comment": "This is a test comment", "user": "test", "tags": "search,engine"}
-  ],
-  "shared": 7,
+    {"comment": "This is a test comment",
+     "created": new Date("10/20/2008  9:36 GMT"),
+     "cid": 2433,
+     "user": "test",
+     "tags": "search,engine"},
+    ...
+    ],
+  "scores": {...},
+  "shared": 12,
   "id": "G",
-  "viewed": 66});
+  "viewed": 180});
+}}}
+
+http://g02.me/comment/delete?cid=2433&callback=Test
+
+Results:
+{{{
+Test({"status": "OK",
+  "created": new Date("10/19/2008  1: 3 GMT"),
+  "url": "http://www.google.com/",
+  "title": "Google",
+  "comments": [...],
+  "scores": {...},
+  "shared": 12,
+  "id": "G",
+  "viewed": 182});
 }}}
