Edited wiki page through web user interface.

--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -85,12 +85,12 @@ Over time, without additional activity, the scores will be reduced by a factor o
 
 == Methods ==
 
-|| *URL* || *Description* ||
-|| / || Retrieve the set of (100) most popular urls ||
-|| /info/id || Retrieve information about a shortened URL id. ||
-|| /map/?url=...&title=... || Generate a shorted URL from a long one. ||
-|| /comment/?id=xxx&comment=text-string || Add a comment to the URL with id, xxx ||
-|| /comment/delete?id=xxx || Remove the comment with comment id, xxx ||
+|| *URL* || *Description* || *Returns* ||
+|| / || Retrieve the set of (100) most popular urls || {popular:[url_info, ...]} ||
+|| /info/id || Retrieve information about a shortened URL id. || url_info ||
+|| /map/?url=...&title=... || Generate a shorted URL from a long one. || url_info ||
+|| /comment/?id=xxx&comment=text-string || Add a comment to the URL with id, xxx || url_info ||
+|| /comment/delete?id=xxx || Remove the comment with comment id, xxx || url_info ||
 
 == Examples ==
 
