Edited wiki page through web user interface.

--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -85,6 +85,7 @@ Over time, without additional activity, the scores will be reduced by a factor o
 The value of the 'status' property of the returned JSON object can be one of:
 
 || *Code* || *Description* ||
+|| OK || Command completed successfully ||
 || Fail || Generic failure ||
 || Fail/!NotFound || Object was not found/does not exist ||
 || Fail/Domain || Attempt to create a shortened URL for a forbidden domain ||
