--- a/trunk/docs/todo.txt
+++ b/trunk/docs/todo.txt
@@ -120,3 +120,4 @@ X URL's with tailing "/" are not normalized to the non-trailing versions leading
 X Fix comment counts
 X Cache broken again?
 ! Lookup function (map url only if it already exists)
+! Catch exceptions in AsyncSequence unit.js
