--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -108,6 +108,11 @@ X comments ordered
   - Use memcache to set rates
   - beware crawlers (don't throttle Google!)
   - Throttle single referer's?
+  - Set userid cookie only at home and mapped pages - require for updating views, and other edit operations
+  - Limit one view per userid in stats
+  - Replace userid with crypto-secure verifiable hash (not forge-able)
+  - Record each user key in database
+  - Enable expiration of user permissions
 - Require dev key for jscript calls (registered user)
 X About Page
 X AppEngine Logo
@@ -149,7 +154,7 @@ X urls.py - CatchAll
 - Mobile
   - iPhone (bookmarklet)
   - Other
-- JSON Date format looks funny with 1 digit dates, hours, etc.
+X JSON Date format looks funny with 1 digit dates, hours, etc.
 - Replies page for users - show follow on comments on URL's user's have shared or commented on.
   - Need "unfollow" capability to stop getting notified
   - Plan:
@@ -175,13 +180,14 @@ X Use a 64-character set that excludes homoglpyhs (Joe Hruska)
   - Global options: Replace characters 0O1Il with .~()*
   - NO: Autohyperlink in email disallows parens, brackets and period!  Down to *~^ (for 0, 1, l)
   - Change to base 57 (no 1iIloO0) -> and grandfather old base64 URL's for id's less than 256 (or some threshold)
-- Darken the light blue color a shade for readability (Kenshi Arasaki)
-- Add slash through the 0 in the G02.ME logo
-- And thousands sep for counts in analytics (info, home, tags, user)
+X Darken the light blue color a shade for readability (Kenshi Arasaki) -> 4cc6ed to 45AFD1
+X Add slash through the 0 in the G02.ME logo (Tony Wright)
+- Add thousands sep for counts in analytics (info, home, tags, user)
 - Hitting back button after leaving a comment (or deleting comment) should not resubmit!
+  - Chrome behavior only?
 - Put all site-specific code in settings.py (analytics account number, G02.ME name, etc.)
 - Recursive attacks
-	- Block links to other URL shoteners (tinyurl.com, www.tinyurl.com, bit.ly, is.gd, etc.)
+	X Block links to other URL shoteners (tinyurl.com, www.tinyurl.com, bit.ly, is.gd, etc.)
 	- Move from GET to PUT
 - Paging control for user activity pages
 
