--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -102,14 +102,14 @@ X auto-hyperlink http addresses in comments
   - convert to g02me links automatically?
 X comments ordered
 - Use memcache to reduce abuse:
-  - Throttle scoring for a given user, or IP address
+  X Throttle scoring for a given user, or IP address
   X Drop userid cookie on user
-  - Throttling middleware
-  - Use memcache to set rates
-  - beware crawlers (don't throttle Google!)
+  X Throttling middleware
+  X Use memcache to set rates
+  X beware crawlers (don't throttle Google!)
   - Throttle single referer's?
   X Set userid cookie only at home and mapped pages - require for updating views, and other edit operations - punt
-  - Limit one view per userid in stats
+  X Limit one view per userid in stats
   X Replace userid with crypto-secure verifiable hash (not forge-able)
   - Record each user key in database
   - Enable expiration of user permissions
@@ -118,8 +118,8 @@ X About Page
 X AppEngine Logo
 X Blog - new features list
 - G02.ME email accounts for admin email from address
-- Don't count views by web crawlers
-  - If no userid cookie - don't count it! (note that Frame will set cookie, and head will then count!)
+X Don't count views by web crawlers
+  X If no userid cookie - don't count it! (note that Frame will set cookie, and head will then count!)
 X Page not found should be a 404 page
 X add expires meta http header to fix google cache bug
 X URL's with tailing "/" are not normalized to the non-trailing versions leading to duplicates
@@ -129,8 +129,8 @@ X Fix comment counts
 X Cache broken again?
 X Lookup function (return url only if it already exists)
 X Catch exceptions in AsyncSequence unit.js
-- Display Dates in Comments in Head
-- Dates display in local time
+X Display Dates in Comments in Head
+X Dates display in local time - use relative age instead
 - Introduce memcache to improve performance of popularity pages
   - info pages
     - statistics (write through view counter)
@@ -193,4 +193,5 @@ X Add slash through the 0 in the G02.ME logo (Tony Wright)
 - Paging control for user activity pages
 - Require a request key for comments and all JSON requests
 - Disallow + is username?
-- Add random bits to userAuth token!  (1 minute resolution only now)
+X Add random bits to userAuth token!  (1 minute resolution only now)
+- For soft authorization on Share - don't add to Score!
